# SMST

./: .gitignore  README.md  chunky notes  properties.json  pyproject.toml  versions.json
code/: startup.py  wol.py
src/server_proj/: main.py  port_check.py  startup.py  wol.py
src/server_proj/bot/: main.py
src/server_proj/com/: port_check.py  wol.py
src/server_proj/server/: mc_handling.py  mc_server.py  startup.py  test.py
src/smst/bot/: main.py
src/smst/com/: port_check.py  wol.py
src/smst/server/: base_server.py  bat_file.py  mc_gui.py  mc_handling.py  mc_server.py  proc.py  test.py
src/smst/server/guis/: create_gui.py  main_gui.py
tests/: batch.py  continous.py  loop.py  tcp_broadcast.py  test_cmd.bat  tests.py  threading_test.py  udp_client.py  udp_server.py
