[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord>=2.3.2",
    "pyshark>=0.6",
    "pyside6>=6.10.0",
    "requests>=2.32.5",
    "screeninfo>=0.8.1",
]

[tool.setuptools.packages.find]
where = ["src"]
